changed Test Project Name

--- a/Cedar App Test/.project
+++ b/Cedar App Test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ListofRidesTest</name>
+	<name>Cedar App Test</name>
 	<comment></comment>
 	<projects>
 		<project>Cedar App</project>
